--- a/bravo.ini.example
+++ b/bravo.ini.example
@@ -10,8 +10,8 @@
 # ~ replace: causes replaced blocks to spawn when needed.
 # Additionally, you probably want either alpha_snow or bravo_snow for snow
 # support.
-#dig_hooks = give,replace,alpha_snow
-dig_hooks = give,replace,bravo_snow,alpha_sand_gravel
+#dig_hooks = give, replace, alpha_snow
+dig_hooks = give, replace, bravo_snow, alpha_sand_gravel
 
 # Build hooks. The important ones:
 # ~ build: place blocks
@@ -19,13 +19,7 @@ dig_hooks = give,replace,bravo_snow,alpha_sand_gravel
 # ~ tile: make workbenches, furnaces, etc. work
 # Additionally, there are a few other good build hooks.
 # ~ torch: Orient torches
-build_hooks = build_snow,torch,tile,build,bravo_snow,alpha_sand_gravel
-
-# Authenticator. There are only two options:
-# ~ offline: anybody can log in, no authentication is done
-# ~ online: only people logged into minecraft.net can log in
-#authenticator = online
-authenticator = offline
+build_hooks = build_snow, torch, tile, build, bravo_snow, alpha_sand_gravel
 
 # Terrain generators.
 # Some important generators:
@@ -35,8 +29,8 @@ authenticator = offline
 # ~ safety: bedrock and other safety essentials
 # You'll probably want simplex, complex, or some other terrain provider, as
 # well.
-#generators = boring,erosion,watertable,grass,safety
-generators = simplex,erosion,watertable,grass,safety
+#generators = boring, erosion, watertable, grass, safety
+generators = simplex, erosion, beaches, watertable, grass, safety
 
 # Try to enable Ampoule. This can massively improve server responsiveness, but
 # it can cause crashes, misrendering, and other weird bugs. You have been
@@ -50,7 +44,7 @@ fancy_console = true
 # Which serializer to use for saving worlds to disk.
 # ~ alpha: The Alpha NBT format
 # ~ json: JSON format, for debugging
-serializer = NBT
+serializer = alpha
 
 [world example]
 # This is just an example world. World names come from the name of the
@@ -63,4 +57,12 @@ port = 25565
 # The folder to use for storing the world. Make sure you have write
 # permissions to this folder. If it does not exist, it will be created.
 # Relative paths are allowed but discouraged.
-path = world
+path = example-world
+
+# Authenticator. There are only two options:
+# ~ offline: anybody can log in, no authentication is done
+# ~ online: only people logged into minecraft.net can log in
+# Bravo also supports the password authentication scheme; see the docs for
+# details.
+#authenticator = online
+authenticator = offline
