Brought up to current with MAD's bravo

--- a/bravo.ini.example
+++ b/bravo.ini.example
@@ -35,6 +35,7 @@ generators = simplex, erosion, watertable, beaches, grass, safety
 # Try to enable Ampoule. This can massively improve server responsiveness, but
 # it can cause crashes, misrendering, and other weird bugs. You have been
 # warned.
+# DO NOT ENABLE ON WIN32. IT CAN CAUSE SERVER LOCKUPS.
 #ampoule = yes
 ampoule = no
 
